@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.591 2006/02/10 02:01:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.592 2006/02/10 04:00:20 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
   pre-create /lib64 dir and /lib -> /lib64 symlink if it exists on livecd
+  copy /etc/{passwd,group,shadow} from livecd to chroot sans 'gentoo'
   src/GLIPortage.py:
   use tar to transfer files from image dir to /mnt/gentoo instead of 'cp -a'
   src/GLIStorageDevice.py,src/GLIInstallProfile.py,src/templates/x86AT.py:
